2003-04-22  Murray Cumming  <murrayc@usa.net>

	* Install headers in x.3 directories instead of .4 because I noticed
	that some are already there so it needed to be fixed, and, given the
	current build files, it was easier to choose .3 than .4 (it is based
	on the library names), and because it does not seem like such a bad
	idea.

2003-04-21  Murray Cumming  <murrayc@usa.net>

	* gtk/src/menushell.ccg: Added 
	GP_LIST_ITER(Glib::List_Cpp_Iterator<GtkListItem, ComboDropDownItem> 
	because the standard GP_LIST iterator seems to be useless. See bug
	#110206.
	
2003-04-21  Murray Cumming  <murrayc@usa.net>

	* examples/book/Makefile.am: Added idle directory.
	* configure.in: Added examples/book/idle/Makefile.

2003-03-30  Gene Ruebsamen <gene@erachampion.com>

	* examples/book/timeout/timerexample.[cc,h]: update examples to
	work with Gtkmm2.
	* examples/book/idle/idleexample.[cc,h]: create new idle directory and
	examples for Gtkmm2.
	* docs/tutorial/gtkmm-tut.xml: update the idle/timeout chapter for
	Gtkmm2 and modify to use the program listings in the examples/book/
	directories.
	
2003-04-21 Oli Kessler <ok@tor.ch>
       
         * gtk/gtk_docs_override.xml, fixed docu bug in the function
         gtk_window_set_default
	
2003-04-15  Ole Laursen  <olau@hardworking.dk>

	* gtk/src/widget.{cc,h}g: Added unset_fg/bg/font/text/base to
	support unwrapped null pointer parameter to modify_fg/bg/....

2003-04-13  Ole Laursen  <olau@hardworking.dk>

	* examples/cellrenderercustom/cellrendererpopup.cc: Switched to
	using wrappers of grab_add and friends instead of using the C
	functions.

	* gtk/src/main.ccg, gtk/src/main.hg: Removed commented wrapper of
	grab_add and friends.

	* gtk/src/widget.ccg, gtk/src/widget.hg: Wrapped
	gtk_grab_add()/remove()/get_current().

2003-03-30  Murray Cumming  <murrayc@usa.net>

        * gtk/gtk_docs_override.xml, likewise atk, pango: Added overrides for
 	docs that mention *_free() functions.
	