@@ -35,7 +35,17 @@
 	<surname>Laursen</surname>
 	<contrib>Parts of chapter on "Internationalization".</contrib>
       </author>
-    </authorgroup>
+	  <author>
+	<firstname>Gene</firstname>
+	<surname>Ruebsamen</surname>
+	<contrib>Chapter on "Win32 Installation".</contrib>
+      </author>
+	  	  <author>
+	<firstname>Cedric</firstname>
+	<surname>Gustin</surname>
+	<contrib>Chapter on "Win32 Installation".</contrib>
+      </author>
+   </authorgroup>
 
 <abstract>
 
@@ -160,6 +170,9 @@ And GTK+ also requires these packages.
 </sect1>
 
 <sect1>
+<title>Unix and Linux</title>
+
+<sect2>
 <title>From Source</title>
 
 <para>
@@ -171,7 +184,7 @@ gtkmm and its dependencies can be built and installed with the following sequenc
 </programlisting>
 </para>
 <para>
-On some systems you will need to install to a different location. For instance, on Red Hat Linux systems you would use the <literal>--prefix</literal> option with configure, like so:
+On some systems you will need to install to a different location. For instance, on Red Hat Linux systems you might use the <literal>--prefix</literal> option with configure, like so:
 <programlisting>
 # ./configure --prefix=/usr
 </programlisting>
@@ -179,12 +192,12 @@ On some systems you will need to install to a different location. For instance, 
 <para>
 The configure script will warn you if you have not installed any of the other packages that it needs.
 </para>
-</sect1>
-
-<sect1>
-<title>Prebuilt Packages</title>
+</sect2>
 
 <sect2>
+<title>Prebuilt Packages</title>
+
+<sect3>
 <title>Debian GNU/Linux</title>
 <para>On Debian GNU/Linux, gtkmm 2.0 is available in unstable/sid. You can install gtkmm by typing this on the command-line:
 <programlisting>
@@ -193,14 +206,24 @@ apt-get install libgtkmm2.0-dev
 
 If you use stable/woody however, you'll have to compile gtkmm2 yourself.
 </para>
-</sect2>
+</sect3>
 
-<sect2>
+<sect3>
 <title>Red Hat Linux</title>
-<para>TODO, including location of examples. You'll need to copy the examples subdirectory 
-to your home directory, or some other place where you have write access,
-to compile the examples.</para>
+<para>RedHat do not yet provide RPMs of gtkmm. We hope they will do this soon.</para>
+</sect3>
+
+<sect3>
+<title>Mandrake Linux</title>
+<para>TODO. gtkmm is in the betas.</para>
+</sect3>
 </sect2>
+</sect1>
+
+<sect1>
+<title>Microsoft Windows</title>
+<para>GTK+ and gtkmm were designed to work well with Microsoft Windows, and the developers encourage its use on the win32 platform.  However, Windows has no standard installation system for development libraries. Please see the <link linkend="sec-windows-installation">Windows Installation</link>
+appendix for win32-specific installation instructions and notes.</para>
 </sect1>
 
 </chapter>
@@ -5220,7 +5243,8 @@ any aspect of gtkmm that does not already have documentation, please
 consider contributing to this document.
 </para>
 <para>
-Ideally, we would like you to provide a patch to the docs/gtkmm-tut.sgml file. This file is currently in the Gtkmm-1.3 module in gnome cvs.
+Ideally, we would like you to provide a patch to the docs/tutorial/gtkmm-tut.xml file. 
+This file is currently in the gtkmm2 module in gnome cvs.
 </para>
 
 <para>
@@ -5808,6 +5832,367 @@ use signals to get things done, unless you're writing a new widget.
 But because overriding methods is so easy in C++, it's entirely
 practical - and sensible - to subclass a button for that purpose.
 </para>
+</appendix>
+
+<appendix id="sec-windows-installation">
+	<title>gtkmm and Win32</title>
+    <para>
+      One of the major advantages of gtkmm is that it is crossplatform. gtkmm programs written on other platforms such as
+      GNU/Linux can generally be transferred to Windows (and vice
+      versa) with few modifications to the source.
+    </para>
+    <para>
+      gtkmm currently only works with the <ulink
+	url="http://mingw.org/">MingW/GCC3.2 compiler</ulink> on the
+      Windows platform. This is unlikely to change in the near
+      future, unless Microsoft upgrades its compilers in Visual
+      Studio to fully support the C++ standard. Information about the gtkmm and the latest Microsoft C++ compiler might be on the mailing list.
+    </para>
+    <para>
+      Installation of MingW is beyond the scope of this document, though not excessively difficult.
+      However, a good GPL'd C++ IDE for windows called <ulink
+	url="http://www.bloodshed.net/">Dev-C++</ulink> has a
+      convenient Windows installer that installs both the IDE and
+      the MingW/GCC3.2 compiler, and we can recommend it.  We will now 
+      show step by step how to install gtkmm and properly set
+      up Dev-C++ as your gtkmm development environment. The following
+	  instructions should work for Dev-C++ versions 4.9.8.0 or higher.
+	  For people who prefer command line compiler tools, a solution based
+	  on the cygwin distribution will be described in the last section of
+      this chapter.
+    </para>
+    <sect1>
+      <title>The Dev-C++ IDE</title>
+      <sect2>
+	<title>Pre-Installation Issues</title>
+	<para>
+	  We strongly recommend that Dev-C++ is installed and
+	  tested before installing any of the GTK+ or gtkmm libraries,
+	  as we will be installing all the libraries into the Dev-C++
+	  directory.  Ensure that you are able to successfully compile and
+	  run a simple C++ program from Dev-C++ before proceeding to the
+	  next step. For instance, try a simple Hello World program.
+	</para>
+	<para>
+	  Note: Currently (as of v4.9.8.0) Dev-C++ does not like to be
+	  installed in directories with spaces in them. Installing
+	  Dev-C++ to the "Program Files" directory may cause problems at
+	  a later stage when it looks for the include and lib
+	  directories.
+	</para>
+      </sect2>
+
+      <sect2>
+	<title>Dependencies</title>
+	<para>
+	  The gtkmm Windows installer requires you to first
+	  install the following dependencies:
+	</para>
+	<itemizedlist>
+	  <listitem>
+	    <para>GTK+ 2.x</para>
+	    <para>
+	      Before installing gtkmm, you need to install GTK+ 2.x.  You
+	      can find the latest windows installer at <ulink
+		url="http://www.dropline.net/gtk/"></ulink>. The Windows
+	      installer will correctly install any dependencies that GTK+
+	      2.x may need.
+	    </para>
+	    <para>
+	      Start with the Runtime GTK+ installer, and allow the
+	      installation to proceed to the default directory.  When the
+	      installation is complete, continue with the Development GTK+
+	      Installer.  When installing Development GTK+, you should change
+	      the installation directory from the default (currently
+	      c:\dev-cpp) to wherever you have your Dev-C++ installation
+	      (ie. d:\dev-cpp). TODO: Why?
+	    </para>
+	  </listitem>
+	</itemizedlist>
+      </sect2>
+
+      <sect2>
+	<title>Installation</title>
+	<para>
+	  Now you are ready to install gtkmm. You can find an installer at <ulink
+	    url="http://www.pcpm.ucl.ac.be/~gustin/win32_ports/"></ulink>.
+	  The gtkmm Windows installer includes both the development
+	  and the runtime files.
+	</para>
+	<para>
+	  Since we are going to be using Dev-C++ as our IDE, it is
+	  strongly suggested that you install gtkmm into the base
+	  Dev-C++ directory (ie. d:\dev-cpp). This will make things
+	  easier later on when setting up the include and lib
+	  directories in Dev-C++.
+	</para>
+	<para>
+	  You should now be ready to execute Win32 gtkmm compiled
+	  binaries.  Note: Some older versions of Windows may require a reboot
+	  before the installer's change to the PATH variable takes effect.
+	</para>
+      </sect2>
+
+      <sect2>
+	<title>Compiling gtkmm Apps with Dev-C++</title>
+	<para>
+	  Now we need to set some project options to create our
+	  first gtkmm project in Dev-C++.
+	</para>
+	<para>
+	  First, we need to let Dev-C++ know what files and libraries to
+	  include when it invokes MingW/GCC3.2. To find out what
+	  arguments need to be passed to GCC, we need to open a command
+	  prompt and type the following:
+	</para>
+	<para>
+	  <command>
+	    pkg-config --libs --cflags gtkmm-2.0
+	  </command>
+	</para>
+	<para>
+	  If the pkg-config command cannot be found, you can cd to the
+	  bin/ directory of where you installed Dev-C++ and execute the
+	  above line from there.  Depending on where you installed
+	  gtkmm, you will get output that looks similar to the
+	  following:
+	</para>
+	<para>
+	  <programlisting>
+	    -Id:/dev-c++/include/gtkmm-2.0
+	    -Id:/dev-c++/lib/gtkmm-2.0/include
+	    -Id:/dev-c++/include/gtk-2.0
+	    -Id:/dev-c++/lib/sigc++-1.2/include
+	    -Id:/dev-c++/include/sigc++-1.2
+	    -Id:/dev-c++/include/glib-2.0
+	    -Id:/dev-c++/lib/glib-2.0/include
+	    -Id:/dev-c++/lib/gtk-2.0/include
+	    -Id:/dev-c++/include/pango-1.0 -Id:/dev-c++/include/atk-1.0
+	    -Ld:/dev-c++/lib -lgtkmm-2.0 -lgdkmm-2.0 -latkmm-1.0
+	    -lgtk-win32-2.0 -lpangomm-1.0 -lglibmm-2.0 -lsigc-1.2
+	    -lgdk-win32-2.0 -latk-1.0 -lgdk_pixbuf-2.0 -lpangowin32-1.0
+	    -lgdi32 -lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -lglib-2.0
+	    -lintl -liconv
+	  </programlisting>
+	</para>
+
+	<para>
+	  <figure id="figure-project-options">
+	    <title>Dev-C++ Project Options</title>
+	    <screenshot>
+	      <graphic format="PNG"
+		fileref="&url_figures_base;devcpp_project_options.png"/>
+	    </screenshot>
+	  </figure>
+	</para>
+
+	<para>
+	  Now create a new Project.  We will make this project work with
+	  gtkmm.  After creating a new project, select <literal>Project Options</literal>
+	  from the menu, and under the <literal>Parameters</literal> tab, paste the
+	  information from pkg-config. In the <literal>Additional commandline options</literal> for
+	  the C++ compiler, paste the include and lib <emphasis>directories</emphasis>.  (The commandline options preceeded by either an -I or
+	  a -L).
+	</para>
+
+	<para>
+	  Then tell the linker what libraries to include, by pasting the libraries into the <literal>Additional commandline options</literal>
+	  for the Linker. (These commandline options are preceeded by a -l).
+	</para>
+
+	<para>
+	  Congratulations! You have successfully created a new project in Dev-C++ that
+	  works with gtkmm.  Try compiling some of the examples in this
+	  tutorial.
+	</para>
+    </sect2>
+    </sect1>
+
+    <sect1>
+      <title>Command line tools</title>
+      <para>
+	To build your gtkmm application with command line tools, we recommend you either use mingw combined with cygwin
+	(<ulink url="http://www.cygwin.com"></ulink>) or msys (<ulink
+	  url="http://www.mingw.org"></ulink>). If you use
+	mingw/cygwin, make sure that the directory that contains the
+	mingw executables is first in your PATH (by checking with g++
+	-v). Then
+      </para>
+      <para>
+	<orderedlist>
+	  <listitem>
+	    <para>Add the directories with the gtkmm and gtk+ DLLs and
+	      the gtk+ executables (particularly the one containing
+	      pkg-config.exe) to your path. If you have selected the
+	      corresponding option in the gtkmm installer, both the
+	      gtkmm and gtk+ runtime will already be in your
+	      PATH. Make sure pkg-config is available by typing
+	      <command>'pkg-config --version'</command>.
+	    </para>
+	  </listitem>
+	  <listitem>
+	    <para>Set the PKG_CONFIG_PATH environment variable to
+	      point to the various lib/pkgconfig directories. Look for
+	      files with the .pc extension in the gtk+ and gtkmm
+	      developer packages. It's the same syntax as on
+	      linux but the directory are separated by semicolons.</para>
+	  </listitem>
+	  <listitem>
+	    <para>Check the gtkmm distribution by typing
+	      <command>'pkg-config --modversion --cflags --libs
+		gtkmm-2.0'</command>. You should get something like
+	    </para>
+	    <para><programlisting>
+		2.2.1
+		-IC:/target/libsigc/lib/sigc++-1.2/include
+		-IC:/target/libsigc/include/sigc++-1.2
+		-IC:/target/gtkmm/include/gtkmm-2.0
+		-IC:/target/gtkmm/lib/gtkmm-2.0/include
+		-IC:/target/gtk-2.0/include/gtk-2.0
+		-IC:/target/gtk-2.0/include/glib-2.0
+		-IC:/target/gtk-2.0/lib/glib-2.0/include
+		-IC:/target/gtk-2.0/lib/gtk-2.0/include
+		-IC:/target/gtk-2.0/include/pango-1.0
+		-IC:/target/gtk-2.0/include/atk-1.0
+		-LC:/target/libsigc/lib
+		-LC:/target/gtkmm/lib
+		-LC:/target/gtk-2.0/lib -lgtkmm-2.0
+		-lgdkmm-2.0 -latkmm-1.0 -lgtk-win32-2.0 -lpangomm-1.0
+		-lglibmm-2.0 -lsigc-1.2 -lgdk-win32-2.0 -latk-1.0
+		-lgdk_pixbuf-2.0 -lpangowin32-1.0 -lgdi32 -lpango-1.0
+		-lgobject-2.0 -lgmodule-2.0 -lglib-2.0 -lintl
+		-liconv</programlisting>
+	    </para>
+	    <para>Of course, the target directories will show your local
+	      installation tree.
+	    </para>
+	  </listitem>
+	  <listitem>
+	    <para>Compile your program with</para>
+	    <para>
+	      <command>g++ `pkg-config --cflags gtkmm-2.0`
+		my_programs.cc -o my_program `pkg-config --libs
+		gtkmm-2.0`</command>
+	    </para>
+	  </listitem>
+	</orderedlist>
+      </para>
+      <para>
+	Alternatively, you can adapt the above compiler and linker flags to
+	your directory structure and use them directly in a Makefile
+	for example.
+      </para>
+    </sect1>
+
+  <sect1>
+	<title>Building gtkmm on Win32</title>
+    <para>Currently, only the mingw (native win32) gcc compiler is supported
+      through the gnu autotools (automake, autoconf, libtool). As explicitly
+      stated in the gtk+ for win32 distribution (<ulink
+	url="http://www.gimp.org/win32/"></ulink>),
+      the gcc compiler provided by the cygwin distribution should not be
+      used to build gtk+/gtkmm libraries and/or applications (see the
+      README.win32 that comes with the gtk+ DLLs).
+    </para>
+    <sect2>
+      <title>The Mingw toolset</title>
+      <para>The mingw distribution which has been tested with this
+	release is the following :
+	<itemizedlist>
+	  <listitem>
+	    <para>MinGW-2.0.0</para>
+	  </listitem>
+	</itemizedlist>
+      </para>
+      <para>The bare mingw distribution does not provide the necessary
+	tools (sh, perl, m4, autoconf, automake, for instance) to run the
+	provided configure script "as is". One (currently non tested)
+	solution is to use mingw in conjunction with msys,which is
+	readily available on the mingw website (<ulink
+	  url="http://www.mingw.org/"></ulink>). TODO: autoconf, automake, and probably m4 and perl should _not_ be required to build gtkmm.
+      </para>
+      <para>The preferred method is to combine the cygwin distribution
+	(for the unix tools that were mentioned above) with mingw by
+	making sure that the mingw tools (gcc, ld, dlltool, ..) are
+	called before any other ones coming from other distribution.
+      </para>
+      <para>First, make sure that you have working distribution of the
+	native port of both libsigc++-1.2.x and gtk+-2 on win32 (see
+	<ulink url="http://www.gimp.org/win32"></ulink>). If you can't
+	compile a simple gtk+ example using gcc and the command
+	<command>`pkg-config --cflags --libs`</command>
+	you should not even think about compiling gtkmm, let alone
+	using precompiled libgtkmm DLLs to port your gtkmm application.
+      </para>
+      <para>The configure script can then be called using (as an
+	example) the following options:
+      </para>
+      <para>
+	<command>./configure --prefix=/target --build=i386-pc-mingw32
+	  --disable-static
+	</command>
+      <para>TODO: explain these options.</para>
+      </para>
+      <para>then</para>
+      <para>
+	<command>make;make check;make install</command>
+      </para>
+      <para>Because Dll support with libtool on the mingw32 platform
+	is fairly recent, it requires a development version of
+	autoconf/automake and libtool, as provided by the
+	autotools-devel package in the cygwin distribution. TODO: Doesn't libtool 1.5 fix this. TODO: Again, we should not need autotools for this. Currently,
+	this means:
+      </para>
+      <para>
+	<itemizedlist>
+	  <listitem>
+	    <para>libtool : 1.4e</para>
+	  </listitem>
+	  <listitem>
+	    <para>automake : 1.7.2</para>
+	  </listitem>
+	  <listitem>
+	    <para>autoconf : 2.57</para>
+	  </listitem>
+	</itemizedlist>
+      </para>
+
+      <warning>
+	<title>IMPORTANT WARNING</title>
+	<para>TODO: Delete this when the libtool problem is fixed. The libtool scripts contained in the source
+	  distribution of the library might not be recent enough to
+	  support dll creation. It will create a static library
+	  instead. The main reason for this situation comes from the
+	  fact that the gnome distribution uses the last stable
+	  releases of the autotools, as opposed to their development
+	  (cvs) versions. Therefore, it is recommended to always
+	  checked the version of libtool that is being used when
+	  compiling libsigc++ on win32 by calling
+	</para>
+	<para><command>libtool --version </command></para>
+	<para>once it has been created by the configure
+	  script.</para>
+	<para>If libtool is too old, it will be necessary to
+	  overwrite it using</para>
+	<para><command>libtoolize --force </command></para>
+	<para>from the cygwin autotools-devel package (usually
+	  located on /usr/autotools/devel), followed by</para>
+	<para><command>aclocal;automake;autoconf </command>
+	</para>
+	<para>before running the configure script again.</para>
+      </warning>
+
+      <para>In the future, a specially tuned source distribution might
+	be provided for mingw.
+      </para>
+    </sect2>
+    <sect2>
+      <title>Other compilers (MSVC++, Borland)</title>
+      <para>Other compilers are not currently know to work. But
+	everyone is free to give it a try.
+      </para>
+    </sect2>
+    </sect1>
 </appendix>
 
 </book>
