@@ -1,3 +1,11 @@
+2003-04-26  Gene Ruebsamen <gene@erachampion.com>
+	
+ 	* docs/tutorial/gtkmm-tut.xml: Added a new appendix for win32
+ 	with the cygwin/command-line portion contributed by Cedric Gustin.
+ 	Created a new link from the Installation section to point to the new appendix.
+ 	Also fixed the filename of the tutorial in the "Contributing" section.
+ 	* docs/tutorial/figures/devcpp_project_options.png: Added new image for the new win32 appendix described above.
+	
 2003-04-22  Murray Cumming  <murrayc@usa.net>
 
 	* Install headers in x.3 directories instead of .4 because I noticed
